AC_INIT([Project Euler], [0.1], [jeek@jeek.net], [projecteuler], [http://github.com/jeek/projecteuler.cpp/])
AC_PREREQ([2.59])
AM_INIT_AUTOMAKE
AC_CONFIG_HEADERS([config.h])
AC_PROG_CXX
AC_CONFIG_FILES([Makefile])
AC_OUTPUT
AC_PROG_LIBTOOL
LT_INIT
AC_CONFIG_MACRO_DIR([m4])
AC_PROG_RANLIB
AC_SUBST([LIBTOOL_DEPS])
